# agent

./: .gitignore  20260324.doc  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
23016071源码/: .env.example
23016071源码/backend/agents/: orchestrator.py
23016071源码/backend/models/: database.py  schemas.py
23016071源码/backend/rag/: knowledge_base.py
23016071源码/backend/safety/: __init__.py  filter.py
23016071源码/backend/utils/: image_gen.py  llm_client.py
23016071源码/frontend/: .env.development  package-lock.json  package.json  vite.config.js
23016071源码/frontend/src/: main.js
23016071源码/frontend/src/components/: SideNav.vue
backend/: main.py
backend/agents/: base.py  orchestrator.py  path_tutor_eval.py  profile.py  resources.py
backend/data/chroma_db/: chroma.sqlite3
backend/models/: database.py
backend/safety/: sensitive_words.json
backend/utils/: llm_client.py  pptx_builder.py
data/ai_intro_course/: 01_人工智能概述.md  02_机器学习基础.md  03_深度学习与神经网络.md
docs/: AI_Coding说明.docx  ~$用户手册.docx  智学系统-个性化学习多智能体系统.pptx  测试报告.docx  演示PPT内容.md  用户手册.docx  知途—基于大模型的多智能体个性化学习系统.pptx  系统设计.docx  需求分析.docx
docs/23016071介绍/: 知途—基于大模型的多智能体个性化学习系统.pptx
frontend/: index.html
frontend/src/: App.vue  config.js
frontend/src/components/: AnimatedBackdrop.vue  SideNav.vue
frontend/src/composables/: useAppStore.js  useTheme.js  useUiPrefs.js
frontend/src/router/: index.js
frontend/src/styles/: base.css
frontend/src/views/: EvaluateView.vue  LearnView.vue  LoginView.vue  PathView.vue  ResourcesView.vue
(+4 files in other folders)
